--- a/src/app/common/upload/upload.component.scss
+++ b/src/app/common/upload/upload.component.scss
@@ -1,3 +1,8 @@
+
+$background-color: #93a7e9bf;
+$border-color: #5158f5e0;
+$font-color: #3b41ff;
+
 * {
     box-sizing: border-box;
 }
@@ -6,8 +11,10 @@
 .form-group {
 
     position: relative;
-    background-color: #90CAF9;
-    border: 1px solid #0D47A1;
+    background-color: $background-color;
+    //border: 1px solid $border-color;
+
+    border-radius: 1rem;
 }
 
 .busy,
@@ -41,7 +48,7 @@
 
     font-weight: bold;
     text-align: center;
-    color: #0D47A1;
+    color: $font-color;
 }
 
 .form-group > input {
@@ -58,12 +65,13 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    border: 2px solid #0D47A1;
+    border: 2px solid $border-color;
     &.is-active {
         background-color: rgba(#1E88E5, 0.5);
-        border: 3px solid #0D47A1;
+        border: 3px solid $border-color;
     }
     z-index: 3;
+    border-radius: 1rem;
 }
 
 
@@ -83,6 +91,11 @@
         color: #f44336;
         background-color: #b71c1c;
     }
+}
+
+label.error > span {
+    color: #b71c1c;
+    //background-color: #b71c1c;
 }
 
 
