--- a/src/app/common/upload/upload.component.scss
+++ b/src/app/common/upload/upload.component.scss
@@ -1,7 +1,8 @@
+@import "../../../themes.scss";
 
-$background-color: #93a7e9bf;
-$border-color: #5158f5e0;
-$font-color: #3b41ff;
+//$inner-element-background-light: #93a7e9bf;
+//$inner-element-border: #5158f5e0;
+//$inner-element-color: #3b41ff;
 
 * {
     box-sizing: border-box;
@@ -11,8 +12,8 @@ $font-color: #3b41ff;
 .form-group {
 
     position: relative;
-    background-color: $background-color;
-    //border: 1px solid $border-color;
+    background-color: $inner-element-background-light;
+    //border: 1px solid $inner-element-border;
 
     border-radius: 1rem;
 }
@@ -36,7 +37,6 @@ $font-color: #3b41ff;
 }
 
 .form-group > label {
-    //background-color: rgba(255, 0, 0, 0.5);
     position: absolute;
     width: 100%;
     height: 100%;
@@ -48,7 +48,8 @@ $font-color: #3b41ff;
 
     font-weight: bold;
     text-align: center;
-    color: $font-color;
+    color: $inner-element-color;
+    white-space: pre-line;
 }
 
 .form-group > input {
@@ -65,43 +66,23 @@ $font-color: #3b41ff;
     position: absolute;
     width: 100%;
     height: 100%;
-    border: 2px solid $border-color;
+    border: 2px solid $inner-element-border;
     &.is-active {
         background-color: rgba(#1E88E5, 0.5);
-        border: 3px solid $border-color;
+        border: 3px solid $inner-element-border;
     }
     z-index: 3;
     border-radius: 1rem;
 }
 
 
-.form-group > mat-icon {
-    position: absolute;
-    z-index: 5;
-    bottom: 0.2rem;
-    right: 0.2rem;
-    background-color: #33691E;
-    width: 28px;
-    height: 28px;
-    border-radius: 14px;
-    color: #8BC34A;
-    padding: 2px;
-
-    &.error {
-        color: #f44336;
-        background-color: #b71c1c;
-    }
-}
-
 label.error > span {
-    color: #b71c1c;
-    //background-color: #b71c1c;
+    color: #ff3d71;
 }
-
 
 .disabled,
 .disabled > *,
 .disabled > * > * {
-    filter: grayscale(.9);
+    filter: grayscale(.8);
     pointer-events: none;
 }
