--- a/src/app/browsersource/hypetrain/hypetrain.component.html
+++ b/src/app/browsersource/hypetrain/hypetrain.component.html
@@ -34,7 +34,7 @@
     }"></div>
 </div>
 
-<div class="settings"  [ngStyle]="{width: viewport.width+'px'}">
+<div class="settings mat-typography"  [ngStyle]="{width: viewport.width+'px'}">
 
   <div class="test">
 
