--- a/src/app/dashboard/twitch/chatbot/chatbot.component.html
+++ b/src/app/dashboard/twitch/chatbot/chatbot.component.html
@@ -1,16 +1,83 @@
+<nb-layout>
+  <nb-layout-column *ngIf="listeners.settings">
 
-<div class="container">
   
-    <nb-card *ngIf="listeners.settings">
-      <nb-card-header>
-        <nb-toggle [disabled]="data.busy" [(checked)]="listeners.settings.chatbot.enabled" (change)="listeners.toggleChatBot()">Chatbot</nb-toggle>
-      </nb-card-header>
+
+    <nb-card>
       <nb-list>
-        <nb-list-item *ngFor="let k of object.keys(listeners.settings.chatbot.categories)">
-          <nb-toggle (change)="listeners.toggleCategory(k)" [(checked)]="listeners.settings.chatbot.categories[k].enabled" [disabled]="data.busy || !listeners.settings.chatbot.enabled">{{k}}</nb-toggle><br>
+        <nb-list-item   *ngFor="let k of object.keys(listeners.settings.chatbot.categories)" 
+                        [class.invisible]="k==='storeable'">
+          <nb-toggle  (change)="listeners.toggleCategory(k)" 
+                      [(checked)]="listeners.settings.chatbot.categories[k].enabled" 
+                      [disabled]="data.busy || !listeners.settings.chatbot.enabled || k==='storeable'"
+                      >
+            {{k}}
+          </nb-toggle><br>
         </nb-list-item>
       </nb-list>
     </nb-card>
-  
-</div>
-  
+
+    <nb-accordion class="centered">
+      <nb-accordion-item>
+        <nb-accordion-item-header>
+          <nb-toggle [(checked)]="listeners.settings.chatbot.categories.storeable.enabled"
+                      (click)="$event.stopPropagation()"
+                      (change)="listeners.toggleCategory('storeable')" 
+                      [disabled]="data.busy || !listeners.settings.chatbot.enabled"
+                      ></nb-toggle>
+          <div class="composed-title">
+            <strong class="text-title">STOREABLE COMMANDS</strong>
+            <span class="text-description">Use these functionalities to create your own commands</span>
+          </div>
+        </nb-accordion-item-header>
+        <nb-accordion-item-body>
+
+
+          <div class="composed-title storeable-header">
+            <strong class="text-title-sub">Usage</strong>
+            <span class="text-description-sub">Every command here can start with any of the following: !cmd !cmds !command !commands</span>
+          </div>
+          <nb-list>
+            <nb-list-item class="usage-description" *ngFor="let command of _storeable.commands">
+              <div class="usage">{{command.usage}}</div>
+              <div class="description">{{command.description}}</div>
+            </nb-list-item>
+          </nb-list>
+
+
+          <div class="composed-title storeable-header">
+            <strong class="text-title-sub">Keywords to be used in 	&lt;answer&gt;</strong>
+            <span class="text-description-sub">
+              You can use these keywords so that they will be replaced accordingly.
+              <br/>
+              Note: "argument" means anything that follows the command
+            </span>
+          </div>
+          <nb-list>
+            <nb-list-item class="usage-description" *ngFor="let keyword of _storeable.keywords">
+              <div class="usage">{{keyword.key}}</div>
+              <div class="description">{{keyword.effect}}</div>
+            </nb-list-item>
+          </nb-list>
+          
+          
+          <div class="composed-title storeable-header">
+            <strong class="text-title-sub">Options that can be added to &lt;answer&gt;</strong>
+            <span class="text-description-sub">
+              You can use set these options to define various settings
+            </span>
+          </div>
+          <nb-list>
+            <nb-list-item class="usage-description" *ngFor="let keyword of _storeable.options">
+              <div class="usage">{{keyword.key}}</div>
+              <div class="description">{{keyword.description}}</div>
+            </nb-list-item>
+          </nb-list>
+
+
+        </nb-accordion-item-body>
+      </nb-accordion-item>
+    </nb-accordion>
+
+  </nb-layout-column>
+</nb-layout>
