--- a/src/themes.scss
+++ b/src/themes.scss
@@ -75,12 +75,43 @@ $inner-element-background-light: #a16eff63;
 $inner-element-border: #a16eff;
 $inner-element-color: #cbafff;
 
+
+
+.composed-title {
+  display: flex;
+  flex-direction: column;
+  > .text-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+  > .text-description {
+    color: rgba(white, .75);
+    font-weight: 300;
+  }
+  > .text-title-sub {
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+  > .text-description-sub {
+    font-size: 0.8rem;
+    color: rgba(white, .75);
+    font-weight: 300;
+  }
+}
+
+
+
 nb-accordion-item:nth-child(2n) {
   background-color: var(--background-basic-color-2);
 }
 
 nb-select.size-medium:not(.full-width) {
   min-width: 180px;
+}
+
+.centered {
+  max-width: 900px;
+  margin: auto;
 }
 
 //Workaround until they fix https://github.com/akveo/nebular/issues/2119
